[project]
name = "comfyui-hunyuanvideowrapper"
description = "ComfyUI diffusers wrapper nodes for [a/HunyuanVideo](https://github.com/Tencent/HunyuanVideo)"
version = "1.0.1"
license = {file = "LICENSE"}
dependencies = ["accelerate >= 1.2.1", "diffusers >= 0.31.0", "transformers >= 4.47.0", "jax >= 0.4.28"]

[project.urls]
Repository = "https://github.com/kijai/ComfyUI-HunyuanVideoWrapper"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kijai"
DisplayName = "ComfyUI-HunyuanVideoWrapper"
Icon = ""

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "hyvideo",
    "hyvideo.diffusion",
    "hyvideo.diffusion.pipelines",
    "hyvideo.diffusion.schedulers",
    "hyvideo.modules",
    "hyvideo.textencoder",
    "hyvideo.utils",
    "hyvideo.vae",
]

[tool.setuptools.package-dir]
"comfyui-hunyuanvideowrapper" = "."
"comfyui-hunyuanvideowrapper.hyvideo" = "hyvideo"
"comfyui-hunyuanvideowrapper.diffusion" = "hyvideo/diffusion"
"comfyui-hunyuanvideowrapper.diffusion.pipelines" = "hyvideo/diffusion/pipelines"
"comfyui-hunyuanvideowrapper.diffusion.schedulers" = "hyvideo/diffusion/schedulers"
"comfyui-hunyuanvideowrapper.modules" = "hyvideo/modules"
"comfyui-hunyuanvideowrapper.textencoder" = "hyvideo/textencoder"
"comfyui-hunyuanvideowrapper.utils" = "hyvideo/utils"
"comfyui-hunyuanvideowrapper.vae" = "hyvideo/vae"

[tool.setuptools.package-data]
"*" = ["**/*.js", "**/*.json"]

[project.entry-points."comfyui.custom_nodes"]
comfyui-hunyuanvideowrapper = "."
comfyui-hunyuanvideowrapper_web_directory = "."